--- a/BattleArena/imgui.ini
+++ b/BattleArena/imgui.ini
@@ -1,5 +1,20 @@
 [Window][Debug##Default]
-Pos=38,48
-Size=83,51
+Pos=39,30
+Size=148,85
+Collapsed=0
+
+[Window][Prova]
+Pos=297,65
+Size=135,57
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=611,3
+Size=189,180
+Collapsed=0
+
+[Window][Axis Gizmo]
+Pos=570,20
+Size=210,210
 Collapsed=0
 
