Camera Control ImGui

--- a/BattleArena/imgui.ini
+++ b/BattleArena/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=39,30
+Pos=23,146
 Size=148,85
 Collapsed=0
 
@@ -16,5 +16,20 @@ Collapsed=0
 [Window][Axis Gizmo]
 Pos=570,20
 Size=210,210
+Collapsed=0
+
+[Window][Finestra di Prova]
+Pos=60,60
+Size=65,167
+Collapsed=0
+
+[Window][CamSettings]
+Pos=8,15
+Size=219,77
+Collapsed=0
+
+[Window][Camera Control Settings]
+Pos=21,15
+Size=302,123
 Collapsed=0
 
