--- a/FireLight/FireLight.vcxproj.filters
+++ b/FireLight/FireLight.vcxproj.filters
@@ -31,6 +31,7 @@
     <ClCompile Include="src\Render\2DRenderSystem.cpp" />
     <ClCompile Include="src\Render\RenderManager.cpp" />
     <ClCompile Include="src\Core\ECS\Systems\Camera3DSystem.cpp" />
+    <ClCompile Include="src\Utility\FastNoise.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui\imconfig.h" />
@@ -74,6 +75,7 @@
     <ClInclude Include="src\Render\RenderManager.h" />
     <ClInclude Include="src\Core\ECS\Components\Camera3D.h" />
     <ClInclude Include="src\Core\ECS\Systems\Camera3DSystem.h" />
+    <ClInclude Include="src\Utility\FastNoise.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
