--- a/FireLight/FireLight.vcxproj
+++ b/FireLight/FireLight.vcxproj
@@ -134,6 +134,8 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Render\Components\Sprite.h" />
+    <ClInclude Include="src\Render\Simple2DRenderSystem.h" />
     <ClInclude Include="src\Core\Component.h" />
     <ClInclude Include="src\Core\GameObject.h" />
     <ClInclude Include="GL\khrplatform.h" />
@@ -162,6 +164,8 @@
     <ClInclude Include="src\Utility\Resources\Texture.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Render\Components\Sprite.cpp" />
+    <ClCompile Include="src\Render\Simple2DRenderSystem.cpp" />
     <ClCompile Include="src\Core\Component.cpp" />
     <ClCompile Include="src\Core\GameObject.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
