--- a/FireLight/FireLight.vcxproj.filters
+++ b/FireLight/FireLight.vcxproj.filters
@@ -22,6 +22,8 @@
     <ClCompile Include="src\Utility\Resources\Texture.cpp" />
     <ClCompile Include="src\Core\Component.cpp" />
     <ClCompile Include="src\Core\GameObject.cpp" />
+    <ClCompile Include="src\Render\Simple2DRenderSystem.cpp" />
+    <ClCompile Include="src\Render\Components\Sprite.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui\imconfig.h" />
@@ -50,6 +52,8 @@
     <ClInclude Include="src\Core\Input.h" />
     <ClInclude Include="src\Core\Component.h" />
     <ClInclude Include="src\Core\GameObject.h" />
+    <ClInclude Include="src\Render\Simple2DRenderSystem.h" />
+    <ClInclude Include="src\Render\Components\Sprite.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
