--- a/Test/Test.vcxproj
+++ b/Test/Test.vcxproj
@@ -22,10 +22,12 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Scenes\Test_Scene.cpp" />
+    <ClCompile Include="Component\TestComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
     <ClInclude Include="Scenes\Test_Scene.h" />
+    <ClInclude Include="Component\TestComponent.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
