--- a/Test/imgui.ini
+++ b/Test/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=368,137
-Size=258,166
+Pos=362,117
+Size=224,43
 Collapsed=0
 
 [Window][ImGui Demo]
@@ -11,5 +11,10 @@ Collapsed=0
 [Window][Test]
 Pos=98,100
 Size=488,289
+Collapsed=0
+
+[Window][SpriteDebug]
+Pos=44,203
+Size=250,198
 Collapsed=0
 
