--- a/Test/imgui.ini
+++ b/Test/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=368,137
-Size=258,166
+Pos=474,31
+Size=258,185
 Collapsed=0
 
 [Window][ImGui Demo]
@@ -11,5 +11,10 @@ Collapsed=0
 [Window][Test]
 Pos=98,100
 Size=488,289
+Collapsed=0
+
+[Window][Console]
+Pos=43,34
+Size=668,517
 Collapsed=0
 
