Base batch Render

--- a/Test/imgui.ini
+++ b/Test/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=362,117
-Size=224,43
+Pos=165,383
+Size=573,256
 Collapsed=0
 
 [Window][ImGui Demo]
@@ -16,5 +16,10 @@ Collapsed=0
 [Window][SpriteDebug]
 Pos=44,203
 Size=250,198
+Collapsed=0
+
+[Window][a]
+Pos=60,60
+Size=264,89
 Collapsed=0
 
