--- a/FireLight/FireLight.vcxproj
+++ b/FireLight/FireLight.vcxproj
@@ -135,6 +135,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="src\Render\Components\Sprite.h" />
+    <ClInclude Include="src\Render\Components\Transform.h" />
     <ClInclude Include="src\Render\Simple2DRenderSystem.h" />
     <ClInclude Include="src\Core\Component.h" />
     <ClInclude Include="src\Core\GameObject.h" />
@@ -165,6 +166,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Render\Components\Sprite.cpp" />
+    <ClCompile Include="src\Render\Components\Transform.cpp" />
     <ClCompile Include="src\Render\Simple2DRenderSystem.cpp" />
     <ClCompile Include="src\Core\Component.cpp" />
     <ClCompile Include="src\Core\GameObject.cpp" />
