--- a/FireLight/FireLight.vcxproj.filters
+++ b/FireLight/FireLight.vcxproj.filters
@@ -24,6 +24,7 @@
     <ClCompile Include="src\Core\GameObject.cpp" />
     <ClCompile Include="src\Render\Simple2DRenderSystem.cpp" />
     <ClCompile Include="src\Render\Components\Sprite.cpp" />
+    <ClCompile Include="src\Render\Components\Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui\imconfig.h" />
@@ -54,6 +55,7 @@
     <ClInclude Include="src\Core\GameObject.h" />
     <ClInclude Include="src\Render\Simple2DRenderSystem.h" />
     <ClInclude Include="src\Render\Components\Sprite.h" />
+    <ClInclude Include="src\Render\Components\Transform.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
