--- a/FireLight/FireLight.vcxproj.filters
+++ b/FireLight/FireLight.vcxproj.filters
@@ -25,7 +25,7 @@
     <ClCompile Include="src\Render\Simple2DRenderSystem.cpp" />
     <ClCompile Include="src\Render\Components\Sprite.cpp" />
     <ClCompile Include="src\Render\Components\Transform.cpp" />
-    <ClCompile Include="src\Utility\Debug\Log.cpp" />
+    <ClCompile Include="src\Utility\Debugging\Log.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui\imconfig.h" />
@@ -57,7 +57,7 @@
     <ClInclude Include="src\Render\Simple2DRenderSystem.h" />
     <ClInclude Include="src\Render\Components\Sprite.h" />
     <ClInclude Include="src\Render\Components\Transform.h" />
-    <ClInclude Include="src\Utility\Debug\Log.h" />
+    <ClInclude Include="src\Utility\Debugging\Log.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
