--- a/FlowerGarden/imgui.ini
+++ b/FlowerGarden/imgui.ini
@@ -1,5 +1,10 @@
 [Window][Debug##Default]
-Pos=132,46
-Size=417,97
+Pos=261,93
+Size=264,148
+Collapsed=0
+
+[Window][Console]
+Pos=60,60
+Size=318,146
 Collapsed=0
 
