--- a/FlowerGarden/FlowerGarden.vcxproj
+++ b/FlowerGarden/FlowerGarden.vcxproj
@@ -127,11 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Components\Draggable.cpp" />
     <ClCompile Include="FlowerGame.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Scenes\MainGameScene.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Components\Draggable.h" />
     <ClInclude Include="FlowerGame.h" />
     <ClInclude Include="Scenes\MainGameScene.h" />
   </ItemGroup>
