--- a/FlowerGarden/FlowerGarden.vcxproj.filters
+++ b/FlowerGarden/FlowerGarden.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="Scenes\MainGameScene.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="Components\Draggable.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FlowerGame.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="Scenes\MainGameScene.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="Components\Draggable.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
   </ItemGroup>
