flower garden shader fix

--- a/Test/imgui.ini
+++ b/Test/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=154,22
+Pos=26,-9
 Size=546,246
 Collapsed=0
 
@@ -14,7 +14,7 @@ Size=488,289
 Collapsed=0
 
 [Window][Console]
-Pos=205,379
+Pos=185,447
 Size=511,190
 Collapsed=0
 
