Tile map Setup Game allocated on Heap

--- a/FlowerGarden/FlowerGarden.vcxproj
+++ b/FlowerGarden/FlowerGarden.vcxproj
@@ -128,12 +128,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Components\Draggable.cpp" />
+    <ClCompile Include="Components\Grid.cpp" />
     <ClCompile Include="FlowerGame.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Scenes\MainGameScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Components\Draggable.h" />
+    <ClInclude Include="Components\Grid.h" />
     <ClInclude Include="FlowerGame.h" />
     <ClInclude Include="Scenes\MainGameScene.h" />
   </ItemGroup>
