--- a/FlowerGarden/FlowerGarden.vcxproj.filters
+++ b/FlowerGarden/FlowerGarden.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Components\Draggable.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="Components\Grid.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FlowerGame.h">
@@ -36,6 +39,9 @@
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="Components\Draggable.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="Components\Grid.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
   </ItemGroup>
