--- a/FireLight/FireLight.vcxproj.filters
+++ b/FireLight/FireLight.vcxproj.filters
@@ -27,6 +27,13 @@
     <ClCompile Include="src\Render\Components\Transform.cpp" />
     <ClCompile Include="src\Utility\Debugging\Log.cpp" />
     <ClCompile Include="src\Render\RenderSystem.cpp" />
+    <ClCompile Include="src\Render\Components\Mesh.cpp" />
+    <ClCompile Include="src\Render\Material.cpp" />
+    <ClCompile Include="src\Render\Components\Camera.cpp" />
+    <ClCompile Include="src\Render\CameraSystem.cpp" />
+    <ClCompile Include="src\Core\System.cpp" />
+    <ClCompile Include="src\Core\MessageSystem\MessageBus.cpp" />
+    <ClCompile Include="src\Core\MessageSystem\Message.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui\imconfig.h" />
@@ -60,6 +67,13 @@
     <ClInclude Include="src\Render\Components\Transform.h" />
     <ClInclude Include="src\Utility\Debugging\Log.h" />
     <ClInclude Include="src\Render\RenderSystem.h" />
+    <ClInclude Include="src\Core\MessageSystem\Message.h" />
+    <ClInclude Include="src\Core\MessageSystem\MessageBus.h" />
+    <ClInclude Include="src\Render\Components\Mesh.h" />
+    <ClInclude Include="src\Render\Material.h" />
+    <ClInclude Include="src\Render\Components\Camera.h" />
+    <ClInclude Include="src\Render\CameraSystem.h" />
+    <ClInclude Include="src\Core\System.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
