--- a/Test/imgui.ini
+++ b/Test/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
 Pos=2,10
-Size=101,50
+Size=39,90
 Collapsed=0
 
 [Window][ImGui Demo]
@@ -14,7 +14,12 @@ Size=488,289
 Collapsed=0
 
 [Window][Console]
-Pos=0,66
-Size=625,421
+Pos=8,11
+Size=57,168
+Collapsed=0
+
+[Window][Terrain Controls]
+Pos=247,30
+Size=499,95
 Collapsed=0
 
