--- a/Test/Test.vcxproj.filters
+++ b/Test/Test.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Component\TerrainComponent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Component\Box.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Component\TerrainComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Component\Box.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
