--- a/Test/Test.vcxproj.filters
+++ b/Test/Test.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Component\Box.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Component\Chunk.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Component\Box.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Component\Chunk.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
