Voxel Save, Time fixing, input cleaning

--- a/Test/Test.vcxproj
+++ b/Test/Test.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="Component\TerrainComponent.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Component\Moviment.cpp" />
     <ClCompile Include="Scenes\Test_Scene.cpp" />
     <ClCompile Include="Component\TestComponent.cpp" />
   </ItemGroup>
@@ -32,6 +33,7 @@
     <ClInclude Include="Component\Box.h" />
     <ClInclude Include="Component\TerrainComponent.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Component\Moviment.h" />
     <ClInclude Include="Scenes\Test_Scene.h" />
     <ClInclude Include="Component\TestComponent.h" />
   </ItemGroup>
