--- a/Test/Test.vcxproj.filters
+++ b/Test/Test.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Component\Chunk.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Component\Moviment.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Component\Chunk.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Component\Moviment.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
