--- a/FireLight/FireLight.vcxproj
+++ b/FireLight/FireLight.vcxproj
@@ -136,9 +136,9 @@
   <ItemGroup>
     <ClInclude Include="src\Render\Components\Camera.h" />
     <ClInclude Include="src\Render\CameraSystem.h" />
+    <ClInclude Include="src\Render\Components\MeshFilter.h" />
     <ClInclude Include="src\Render\DebugDraw.h" />
     <ClInclude Include="src\Render\Material.h" />
-    <ClInclude Include="src\Render\Components\Mesh.h" />
     <ClInclude Include="src\Core\MessageSystem\Message.h" />
     <ClInclude Include="src\Core\MessageSystem\MessageBus.h" />
     <ClInclude Include="src\Render\Components\Sprite.h" />
@@ -185,8 +185,8 @@
     <ClCompile Include="src\Core\MessageSystem\MessageBus.cpp" />
     <ClCompile Include="src\Render\Components\Camera.cpp" />
     <ClCompile Include="src\Render\CameraSystem.cpp" />
+    <ClCompile Include="src\Render\Components\MeshFilter.cpp" />
     <ClCompile Include="src\Render\Material.cpp" />
-    <ClCompile Include="src\Render\Components\Mesh.cpp" />
     <ClCompile Include="src\Render\Components\Sprite.cpp" />
     <ClCompile Include="src\Render\Components\Transform.cpp" />
     <ClCompile Include="src\Render\OpenGL\IndexBuffer.cpp" />
